Install livewire/livewire

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "league/flysystem-cached-adapter": "~1.0",
         "league/fractal": "^0.17.0",
         "league/omnipay": "^3.0",
+        "livewire/livewire": "^1.0",
         "maennchen/zipstream-php": "^1.2",
         "nwidart/laravel-modules": "^6.0",
         "omnipay/paypal": "^3.0",
