--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.2.0"
+        "tailwindcss": "^1.2.0",
+        "turbolinks": "^5.2.0"
     }
 }
