--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "ext-json": "*",
         "asgrim/ofxparser": "^1.2",
         "ashallendesign/laravel-exchange-rates": "^2.1",
+        "beganovich/omnipay-checkout": "dev-master",
         "cleverit/ubl_invoice": "^1.3",
         "codedge/laravel-selfupdater": "~3.0",
         "composer/composer": "^1.10",
@@ -53,7 +54,7 @@
         "staudenmeir/eloquent-has-many-deep": "^1.11",
         "stripe/stripe-php": "^7.0",
         "superbalist/laravel-google-cloud-storage": "^2.2",
-        "turbo124/collector": "^0.3",
+        "turbo124/collector": "^0",
         "webpatser/laravel-countries": "dev-master#75992ad",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
