--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "ext-json": "*",
         "asgrim/ofxparser": "^1.2",
         "ashallendesign/laravel-exchange-rates": "^2.1",
-        "beganovich/omnipay-checkout": "dev-master",
+        "beganovich/omnipay-checkout": "@dev",
         "cleverit/ubl_invoice": "^1.3",
         "codedge/laravel-selfupdater": "~3.0",
         "composer/composer": "^1.10",
@@ -114,5 +114,14 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": {
+        "dev-package": {
+            "type": "path",
+            "url": "../omnipay-checkout",
+            "options": {
+                "symlink": true
+            }
+        }
+    }
 }
