--- a/composer.json
+++ b/composer.json
@@ -114,14 +114,5 @@
         "optimize-autoloader": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "repositories": {
-        "dev-package": {
-            "type": "path",
-            "url": "../omnipay-checkout",
-            "options": {
-                "symlink": true
-            }
-        }
-    }
+    "prefer-stable": true
 }
