--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.4",
-        "turbolinks": "^5.2.0"
+        "tailwindcss": "^1.4"
     }
 }
