--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "cleverit/ubl_invoice": "^1.3",
         "codedge/laravel-selfupdater": "~3.0",
         "composer/composer": "^1.10",
+        "czproject/git-php": "^3.17",
         "dacastro4/laravel-gmail": "^3.2",
         "doctrine/dbal": "^2.10",
         "fedeisas/laravel-mail-css-inliner": "2.3",
