--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@tailwindcss/ui": "^0.1.3",
         "axios": "^0.19",
         "cross-env": "^7.0",
+        "cypress": "^4.6.0",
         "jsignature": "^2.1.3",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
