--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "ext-json": "*",
         "asgrim/ofxparser": "^1.2",
         "beganovich/omnipay-checkout": "dev-master",
+        "checkout/checkout-sdk-php": "^1.0",
         "cleverit/ubl_invoice": "^1.3",
         "composer/composer": "^1.10",
         "czproject/git-php": "^3.17",
