--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
         "php": ">=7.3",
         "ext-json": "*",
         "asgrim/ofxparser": "^1.2",
-        "beganovich/omnipay-checkout": "dev-master",
         "checkout/checkout-sdk-php": "^1.0",
         "cleverit/ubl_invoice": "^1.3",
         "composer/composer": "^1.10",
@@ -80,7 +79,8 @@
             "App\\": "app/"
         },
         "files": [
-            "app/Libraries/OFX.php"        ]
+            "app/Libraries/OFX.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -89,8 +89,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
