Fixes for currency precision

--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,7 @@ MAIL_FROM_ADDRESS='user@example.com'
 MAIL_FROM_NAME='Self Hosted User'
 
 POSTMARK_API_TOKEN=
+REQUIRE_HTTPS=true
 
 GOOGLE_MAPS_API_KEY=
 API_SECRET=superdoopersecrethere
