--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@tailwindcss/ui": "^0.1.3",
         "axios": "^0.19",
+        "card-validator": "^6.2.0",
         "cross-env": "^7.0",
         "cypress": "^4.6.0",
         "jsignature": "^2.1.3",
