Swap out credit card holder

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,17 +1,20 @@
 {
-    "/js/app.js": "/js/app.js?id=baf7fef12d5e65c3d9ff",
-    "/css/app.css": "/css/app.css?id=1b4ad8bb52ea6da03528",
-    "/js/clients/invoices/action-selectors.js": "/js/clients/invoices/action-selectors.js?id=d16c0e6728b00d329cbb",
-    "/js/clients/invoices/payment.js": "/js/clients/invoices/payment.js?id=8ce8955ba775ea5f47d1",
-    "/js/clients/payment_methods/authorize-ach.js": "/js/clients/payment_methods/authorize-ach.js?id=30a5db56b004becf4715",
-    "/js/clients/payment_methods/authorize-authorize-card.js": "/js/clients/payment_methods/authorize-authorize-card.js?id=1db80c8670affed9909b",
-    "/js/clients/payment_methods/authorize-stripe-card.js": "/js/clients/payment_methods/authorize-stripe-card.js?id=f4c45f0da9868d840799",
-    "/js/clients/payments/alipay.js": "/js/clients/payments/alipay.js?id=04778cbf46488e8f6b5f",
-    "/js/clients/payments/checkout.com.js": "/js/clients/payments/checkout.com.js?id=591618c8bcd926b7111d",
-    "/js/clients/payments/process.js": "/js/clients/payments/process.js?id=be2b10b1b5e3a727f6e2",
-    "/js/clients/payments/sofort.js": "/js/clients/payments/sofort.js?id=f9253aea74535bc46886",
-    "/js/clients/quotes/action-selectors.js": "/js/clients/quotes/action-selectors.js?id=88ff76c9ca1c15fc011b",
-    "/js/clients/quotes/approve.js": "/js/clients/quotes/approve.js?id=9cdbe50bab63dc1dd520",
-    "/js/clients/shared/pdf.js": "/js/clients/shared/pdf.js?id=5df2af6e8ba88b2621d9",
-    "/js/setup/setup.js": "/js/setup/setup.js?id=cd5d37e5eddb88678da4"
+    "/js/app.js": "/js/app.js?id=ff27ccddd30b0e7b4db9",
+    "/css/app.css": "/css/app.css?id=b4f28bc71925ec9b1f74",
+    "/js/clients/invoices/action-selectors.js": "/js/clients/invoices/action-selectors.js?id=563d7bee34bc37e1d3d6",
+    "/js/clients/invoices/payment.js": "/js/clients/invoices/payment.js?id=d24207c686e5fce2ca0d",
+    "/js/clients/payment_methods/authorize-ach.js": "/js/clients/payment_methods/authorize-ach.js?id=789fe0ea7dff85c943ad",
+    "/js/clients/payment_methods/authorize-authorize-card.js": "/js/clients/payment_methods/authorize-authorize-card.js?id=7f63b5cd48631432a424",
+    "/js/clients/payment_methods/authorize-stripe-card.js": "/js/clients/payment_methods/authorize-stripe-card.js?id=420e22ba244289dd75f8",
+    "/js/clients/payments/alipay.js": "/js/clients/payments/alipay.js?id=cf114848ef8a3633a51b",
+    "/js/clients/payments/authorize-credit-card-payment.js": "/js/clients/payments/authorize-credit-card-payment.js?id=5061b0587d137f8f5183",
+    "/js/clients/payments/card-js.min.js": "/js/clients/payments/card-js.min.js?id=3fe6822360e6c456d1a2",
+    "/js/clients/payments/checkout.com.js": "/js/clients/payments/checkout.com.js?id=31df208670107e18f59d",
+    "/js/clients/payments/process.js": "/js/clients/payments/process.js?id=f4c4b09d4454070a6db6",
+    "/js/clients/payments/sofort.js": "/js/clients/payments/sofort.js?id=07f8d2205263058e5ba4",
+    "/js/clients/quotes/action-selectors.js": "/js/clients/quotes/action-selectors.js?id=24201ac11ba77c6a6261",
+    "/js/clients/quotes/approve.js": "/js/clients/quotes/approve.js?id=2cbf6713ca352ba18b03",
+    "/js/clients/shared/pdf.js": "/js/clients/shared/pdf.js?id=bc40e9b54768213d34b9",
+    "/js/setup/setup.js": "/js/setup/setup.js?id=276c75e51213f0cf5835",
+    "/css/card-js.min.css": "/css/card-js.min.css?id=62afeb675235451543ad"
 }
