Adjustment for release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Cleanup Builds
         run: |
-          sudo rm -rf nodule_modules/
+          #sudo rm -rf nodule_modules/
           sudo rm -rf bootstrap/cache/*
 
       - name: Build project # This would actually build your project, using zip for an example artifact
