Fix for build .env

--- a/.env.example
+++ b/.env.example
@@ -6,16 +6,16 @@ APP_DEBUG=false
 APP_URL=http://localhost
 
 DB_CONNECTION=db-ninja-01
-MULTI_DB_ENABLED=true
+MULTI_DB_ENABLED=false
 
 DB_HOST1=localhost
-DB_DATABASE1=db-ninja-01
+DB_DATABASE1=ninja
 DB_USERNAME1=ninja
 DB_PASSWORD1=ninja
 DB_PORT1=3306
 
 DB_HOST2=localhost
-DB_DATABASE2=db-ninja-02
+DB_DATABASE2=ninja2
 DB_USERNAME2=ninja
 DB_PASSWORD2=ninja
 DB_PORT2=3306
@@ -43,7 +43,7 @@ MAIL_FROM_ADDRESS='user@example.com'
 MAIL_FROM_NAME='Self Hosted User'
 
 POSTMARK_API_TOKEN=
-REQUIRE_HTTPS=true
+REQUIRE_HTTPS=false
 
 GOOGLE_MAPS_API_KEY=
 API_SECRET=superdoopersecrethere
