--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "test": "cypress run"
+        "test": "cypress run",
+        "test:gui": "cypress open"
     },
     "devDependencies": {
         "@babel/compat-data": "7.9.0",
         "@babel/plugin-proposal-class-properties": "^7.10.1",
         "laravel-mix-purgecss": "^5.0.0-rc.1",
-        "vue-template-compiler": "^2.6.11"
+        "vue-template-compiler": "^2.6.11",
+        "cypress": "^4.6.0",
     },
     "dependencies": {
         "@tailwindcss/ui": "^0.1.3",
@@ -22,7 +24,6 @@
         "card-js": "^1.0.13",
         "card-validator": "^6.2.0",
         "cross-env": "^7.0",
-        "cypress": "^4.6.0",
         "jsignature": "^2.1.3",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
