move cypress to dev dependencies list

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "@babel/plugin-proposal-class-properties": "^7.10.1",
         "laravel-mix-purgecss": "^5.0.0-rc.1",
         "vue-template-compiler": "^2.6.11",
-        "cypress": "^4.6.0",
+        "cypress": "^4.6.0"
     },
     "dependencies": {
         "@tailwindcss/ui": "^0.1.3",
