Change PING route response

--- a/composer.json
+++ b/composer.json
@@ -55,8 +55,7 @@
         "staudenmeir/eloquent-has-many-deep": "^1.11",
         "stripe/stripe-php": "^7.0",
         "turbo124/beacon": "^1",
-        "webpatser/laravel-countries": "dev-master#75992ad",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "webpatser/laravel-countries": "dev-master#75992ad"
     },
     "require-dev": {
         "laravelcollective/html": "^6",
